[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/menu/background.png" type="Texture" id=2]
[ext_resource path="res://UI/Elements/MattePanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Elements/BigBorderlessButton.tscn" type="PackedScene" id=4]

[node name="MainMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
LoadGamePath = NodePath("MattePanel/MarginContainer/VBoxContainer/LoadGame")
ButtonContainerPath = NodePath("MattePanel/MarginContainer/VBoxContainer")

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -456.0
margin_right = 24.0
margin_bottom = 270.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="MattePanel" parent="." index="1" instance=ExtResource( 3 )]

margin_left = 224.0
margin_top = 288.0
margin_right = 404.0
margin_bottom = 530.0

[node name="MarginContainer" type="MarginContainer" parent="MattePanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 45
custom_constants/margin_top = 20
custom_constants/margin_left = 45
custom_constants/margin_bottom = 20
_sections_unfolded = [ "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MattePanel/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_top = 20.0
margin_right = 171.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="NewGame" parent="MattePanel/MarginContainer/VBoxContainer" index="0" instance=ExtResource( 4 )]

margin_right = 126.0
margin_bottom = 32.0
text = "New Game"

[node name="LoadGame" parent="MattePanel/MarginContainer/VBoxContainer" index="1" instance=ExtResource( 4 )]

margin_top = 52.0
margin_right = 126.0
margin_bottom = 84.0
disabled = true
text = "Load Game"

[node name="Credits" parent="MattePanel/MarginContainer/VBoxContainer" index="2" instance=ExtResource( 4 )]

margin_top = 104.0
margin_right = 126.0
margin_bottom = 136.0
text = "Credits"

[node name="Quit" parent="MattePanel/MarginContainer/VBoxContainer" index="3" instance=ExtResource( 4 )]

margin_top = 156.0
margin_right = 126.0
margin_bottom = 188.0
text = "Quit"

[connection signal="pressed" from="MattePanel/MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="MattePanel/MarginContainer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]

[connection signal="pressed" from="MattePanel/MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="MattePanel/MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]


